# hackathon-phase-3

./: .dockerignore  .gitignore  AI_AGENT_INTEGRATION.md  CORS_CONFIGURATION_GUIDE.md  DOCKER_BUILD_GUIDE.md  DOCKER_SETUP_GUIDE.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOT_CHATBOT.md  build_containers.bat  build_containers.sh  final_verification.py  start_server.bat  test_ai_agent.py  test_chatbot_commands.py  test_chatbot_verification.py  test_comprehensive.py  test_update_simple.py  test_update_task.py  tmpclaude-3a7f-cwd  verify_chatbot.bat  verify_chatbot.sh  verify_implementation.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.backend  README.md  app.py  create_tables.py  database.py  db_test.py  debug_db.py  dependencies.py  final_test.py  force_init_db.py  init_db.py  main.py  minimal_auth_test.py  models.py  pyproject.toml  requirements.txt  setup.py  setup_database.py  setup_neon_db.py  simple_test.py  start.bat  start.sh  task_debug.py  task_test.py  test_models.py  test_openrouter.py  test_operations.py  tmpclaude-7a7f-cwd  verify_tables.py
backend/api/routers/: auth.py  tasks.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 0001_initial_chatbot_models.py
backend/src/: config.py  database.py  database_safe.py  main.py  main_safe.py
backend/src/agents/: chat_agent.py  chat_agent_mock_fallback.py
backend/src/dependencies/: auth.py
backend/src/exceptions/: auth.py
backend/src/mcp/: __init__.py  tools.py
backend/tests/: test_auth.py  test_tasks.py
(+315 files in other folders)
